Ajout des descriptions du nom et de l'adresse

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<h2>Informations de l'éole :</h2>
 		<ul>
 			<li>Nom: ESGI</li>
+			Nom en 4 lettres (ce sont des initiales), il s'agit d'une école d'informatique
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
+			Adresse de l'ESGI Paris, effectivement il en existe autre part en France
 			<li>Directeur: Kamal Sananes</li>
 			<li>Prof de git: Thomas Ecalle</li>
 		</ul>
