Ajout des descriptions du directeur et du prof de git

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
 			Adresse de l'ESGI Paris, effectivement il en existe autre part en France
 			<li>Directeur: Kamal Sananes</li>
+			Cette personne apprécie les blockchains
 			<li>Prof de git: Thomas Ecalle</li>
+			Mesure environ 1,90m, plutôt doué en flutter
 		</ul>
 	</section>
 </body>
